src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__modules_graph__tests__circular_1-2.snap
---
source: src/analyze_ts_deps/modules_graph.rs
expression: "get_node_deps(&\"dep1\".to_string(), &get_node_edges)"
---
DepsResult {
    deps: {
        "dep2",
        "circular",
        "dep1",
        "dep3",
    },
    circular_deps: Some(
        [
            "dep1 > dep2 > circular > dep1",
        ],
    ),
}
