src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__modules_graph__tests__circular_1.snap
---
source: src/analyze_ts_deps/modules_graph.rs
expression: "get_node_deps(&\"circular\".to_string(), &get_node_edges)"
---
DepsResult {
    deps: {
        "dep1",
        "dep2",
        "circular",
        "dep3",
    },
    circular_deps: Some(
        [
            "circular > dep1 > dep2 > circular",
        ],
    ),
}
