src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__modules_graph__tests__circular_dep_calc-3.snap
---
source: src/analyze_ts_deps/modules_graph.rs
expression: "get_node_deps(&\"dep2\".to_string(), &get_node_edges)"
---
DepsResult {
    deps: {
        "circular",
        "dep1",
        "dep2",
    },
    circular_deps: Some(
        [
            "dep2 > circular > dep1 > dep2",
        ],
    ),
}
